# PennyPrompt

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  pr-issue-linkage.yml  release.yml
config/: default.toml
crates/penny-admin/: Cargo.toml
crates/penny-admin/src/: lib.rs
crates/penny-admin/tests/: admin_alpha_integration.rs
crates/penny-budget/: Cargo.toml
crates/penny-budget/src/: lib.rs
crates/penny-cli/: Cargo.toml
crates/penny-cli/src/: main.rs
crates/penny-cli/tests/: binary_rename.rs  help_output.rs  run_execute.rs
crates/penny-cli/tests/golden/: budget_block_line.txt  burn_rate_line.txt  loop_detected_line.txt
crates/penny-config/: Cargo.toml
crates/penny-config/src/: lib.rs
crates/penny-cost/: Cargo.toml
crates/penny-cost/src/: lib.rs
crates/penny-detect/: Cargo.toml
crates/penny-detect/src/: lib.rs
crates/penny-ledger/: Cargo.toml
crates/penny-ledger/src/: lib.rs
crates/penny-ledger/tests/: ledger_alpha_integration.rs  ledger_concurrency_stress.rs
crates/penny-observe/: Cargo.toml
crates/penny-observe/src/: lib.rs
crates/penny-providers/: Cargo.toml
crates/penny-providers/src/: lib.rs
crates/penny-proxy/: Cargo.toml
crates/penny-proxy/src/: lib.rs
crates/penny-proxy/tests/: proxy_alpha_integration.rs  structured_tracing.rs
crates/penny-proxy/tests/golden/: attribution_failed_error.json  invalid_request_error.json  persistence_failed_error.json
crates/penny-store/: Cargo.toml
crates/penny-store/src/: lib.rs
crates/penny-types/: Cargo.toml
crates/penny-types/src/: lib.rs
docs/: ALPHA-MANUAL-CHECKLIST.md  ARCHITECTURE.md  CONFIG-REFERENCE.md  DEVELOPMENT_WORKFLOW.md  GITHUB_BACKLOG.md  INSTALL.md  LIMITATIONS.md  PRICEBOOK.md  QUICKSTART.md  RELEASE.md  RELEASE_GATE_v0.1.0-alpha.2.md  RELEASE_GATE_v0.1.0-alpha.3.md  RELEASE_GATE_v0.1.0-alpha.5.md  STRATEGY-AUDIT-2026-07-05.md  TECHNICAL_NOTES.md  money-migration-2026-04.md  status-2026-05-07.md
docs/release-audit/: 2026-04-30-release-history-reconciliation.md
docs/release-notes/: v0.1.0-alpha.2.md  v0.1.0-alpha.3.md  v0.1.0-alpha.5.md
migrations/: 0001_projects_sessions.sql  0002_providers_models.sql  0003_pricebook.sql  0004_requests_usage.sql  0005_budgets.sql  0006_cost_ledger.sql  0007_events.sql  0008_money_micros.sql  0009_pricebook_micros.sql  0010_pricebook_cache_rates.sql  0011_request_usage_cache_tokens.sql
presets/: explore.toml  indie.toml  team.toml
prices/: anthropic.toml  openai.toml
scripts/: create_github_backlog.sh  install.sh
