[package]
name = "penny-admin"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
async-stream = "0.3"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
penny-store = { path = "../penny-store" }
penny-types = { path = "../penny-types" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1", features = ["time"] }
tracing = "0.1"
thiserror = "2"

[dev-dependencies]
penny-proxy = { path = "../penny-proxy" }
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util"] }
