[package]
name = "penny-budget"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
penny-ledger = { path = "../penny-ledger" }
penny-store = { path = "../penny-store" }
penny-types = { path = "../penny-types" }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
