[package]
name = "penny-cli"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
glob = "0.3"
penny-cost = { path = "../penny-cost" }
penny-config = { path = "../penny-config" }
penny-store = { path = "../penny-store" }
penny-types = { path = "../penny-types" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
tempfile = "3"
