[package]
name = "penny-cost"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
penny-store = { path = "../penny-store" }
penny-types = { path = "../penny-types" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["chrono", "runtime-tokio-rustls", "sqlite"] }
thiserror = "1"
tiktoken-rs = "0.6"
toml = "0.8"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
