[package]
name = "penny-detect"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
penny-config = { path = "../penny-config" }
penny-types = { path = "../penny-types" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
