[package]
name = "penny-providers"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
async-trait = "0.1"
penny-types = { path = "../penny-types" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
