[package]
name = "penny-proxy"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
penny-cost = { path = "../penny-cost" }
penny-providers = { path = "../penny-providers" }
penny-store = { path = "../penny-store" }
penny-types = { path = "../penny-types" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
thiserror = "1"
tokio = { version = "1", features = ["net", "rt"] }
uuid = { version = "1", features = ["serde", "v7"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util"] }
