[package]
name = "penny-store"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
penny-types = { path = "../penny-types" }
serde_json = "1"
sqlx = { version = "0.8", features = ["chrono", "json", "migrate", "runtime-tokio-rustls", "sqlite", "uuid"] }
thiserror = "1"
uuid = { version = "1", features = ["serde", "v7"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
